Corrected some spelling mistakes

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -166,7 +166,7 @@
    "id": "4ac5fbd7",
    "metadata": {},
    "source": [
-    "We now find the equilibria branch whilst varying the paramete a₂₁ and then find stability of these equilibirium points:"
+    "We now find the equilibria branch whilst varying the parameter a₂₁ and then find stability of these equilibrium points:"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ea4aa717",
    "metadata": {},
    "outputs": [
