Changed F_eq to create_ststfunc

--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
     "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
     "include(\"../shared/newton_new.jl\") #Newton function\n",
-    "include(\"../shared/F_eq.jl\") #Initialisates a function to find equilibria \n",
+    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
     "nd=1 #number of delays (single delay so nd=1)\n",
     "\n",
     "#Now we looking at finding the equilibria branches\n",
-    "y01,f_equ=F_eq(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1) #pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
+    "y01,f_equ=create_ststfunc(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1) #pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
     "#The above ouputs the initial guess for x,v and parameter 'a' and the equilibrium function\n",
     "\n",
     "ylist1,ytan1=track_curve_new(f_equ,y01,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "74d1d50f",
    "metadata": {},
    "outputs": [
@@ -469,11 +469,11 @@
       "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
       "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
       "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] newton_new(f::var\"#148#152\"{var\"#fhopf#164\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#163\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#134#136\"{var\"#148#152\"{var\"#fhopf#164\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#163\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
+      " [10] newton_new(f::var\"#30#34\"{var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#16#18\"{var\"#30#34\"{var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\shared\\newton_new.jl:12\n",
       " [11] newton_new(f::Function, x0::Vector{Float64})\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\shared\\newton_new.jl:2\n",
-      " [12] track_curve_new(userf::var\"#fhopf#164\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#163\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#150#154\"{var\"#fhopf#164\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#163\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      " [12] track_curve_new(userf::var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\shared\\track_curve_new.jl:17\n",
       " [13] top-level scope\n",
       "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X33sZmlsZQ==.jl:3"
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "614d4f23",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
     "nd=1 #number of delays (single delay so nd=1)\n",
     "\n",
     "#Now we looking at finding the equilibria branches\n",
-    "y02,f_equ2=F_eq(invpend_1delay,[0.0,0],[a,b,tau_trial2],nd,par_indx=1)#nd=1,pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
+    "y02,f_equ2=create_ststfunc(invpend_1delay,[0.0,0],[a,b,tau_trial2],nd,par_indx=1)#nd=1,pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
     "#The above ouputs the initial guess for x,v and parameter 'a' and the equilibrium function\n",
     "\n",
     "ylist11,ytan11=track_curve_new(f_equ2,y02,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "f3daba93",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "c0732f12",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "7fc15129",
    "metadata": {},
    "outputs": [
