--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
     "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
     "include(\"../shared/newton_new.jl\") #Newton function\n",
-    "include(\"../shared/F_eq.jl\") #Initialisates a function to find equilibria \n",
+    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
     "x0=((beta-gamma)/(gamma))^(1/n) #obtained from solving f(x*,...,x*)=0 problem\n",
     "nd=1 #one delay\n",
     "\n",
-    "y01,feq=F_eq(mackeyglassfunc, x0, [beta,gamma,n,tau],nd, par_indx=4) #finds initial equilibrium point and creates a function to find the equilibria branch\n",
+    "y01,feq=create_ststfunc(mackeyglassfunc, x0, [beta,gamma,n,tau],nd, par_indx=4) #finds initial equilibrium point and creates a function to find the equilibria branch\n",
     "ylist1,ytan1=track_curve_new(feq,y01,[0.0,1],stepsize=0.01,nmax=100) #tracks equilibria to find the equilibria branch\n",
     "\n",
     "#Below plots the equilibiria branch\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
    "source": [
     "yheq01,fhopfeq1=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd)\n",
     "\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,-1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47\n",
+    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,-1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47 #chnage one to 1, -1\n",
     "yheqlist2,heqtan2=track_curve_new(fhopfeq1,yheq01,[-1.0,0,0,0,1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
     "\n",
     "#Plot of continuation/tracking in (a,b) plane\n",
