Changed system description

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -20,7 +20,7 @@
     "  \\dot{x}_2&=-\\kappa x_2(t) + \\beta \\tanh(x_2(t-\\tau_s)) + a_{21} \\tanh(x_2(t-\\tau_1))\n",
     "\\end{align}\n",
     "```\n",
-    "where τ₁ and τ₂ are the delays between neurons 1 and 2, respectively, getting a stimulus and reacting to the stimulus and where τ_s is the delay between neuron 1 reacting and neuron 2 getting stimulated by neuron 1's reaction."
+    "where τ₁ and τ₂ are the delays between neurons 1 and 2 and where τ_s is the delay between each neuron getting a stimulus and reacting to the stimulus."
    ]
   },
   {
