Added bit of differentiation matrix example

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -246,6 +246,139 @@
     "scatter!(ax2,xivals2,fxivals3)\n",
     "fig2\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "978903b4",
+   "metadata": {},
+   "source": [
+    "# 2D barycentric interpolation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0d165a",
+   "metadata": {},
+   "source": [
+    "For now (18.08.2025), we're looking at Chebyshev points of the 2nd kind. Say we have a structured grid, for example in 2D:\n",
+    "```math\n",
+    "\\begin{align*}\n",
+    "x_i &= \\cos(\\frac{\\pi i}{n_x}) & \\text{for i=0,..., $n_x$}\\\\\n",
+    "y_j &=\\cos(\\frac{\\pi j}{n_y}) & \\text{for j=0,..., $n_y$}\n",
+    "\\end{align*}\n",
+    "```\n",
+    "And let $f_{ij}=f(x_i,y_j)$ be the function value at $(x_i,y_j)$  - i.e. $f_{ij}=f(x_i,y_j)$. For ease, we assume $n_x=n_y=n$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6191924b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Float64}:\n",
+       " 2.2500000000000004"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#for basic functio f(x,y)=x+y\n",
+    "include(\"j_eval_multidim.jl\")\n",
+    "fmat1=[2 1 0; 1 0 -1; 0 -1 -2]\n",
+    "j_eval_multidim([[1,1],[0,0],[-1.0,-1]],[[0.25,2]],fmat1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "395a8643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.25"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#check it \n",
+    "include(\"basic_func.jl\")\n",
+    "ans=basic_func(0.25,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7028065",
+   "metadata": {},
+   "source": [
+    "# Differentiating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "616fdae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " -0.8414709848076489\n",
+       " -0.8414043226496261\n",
+       " -0.8412042758051776\n",
+       " -0.8408706633084314\n",
+       " -0.8404031840599911"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "include(\"j_eval.jl\")\n",
+    "n=200 #so we have 201 interpolation/Chebyshev points\n",
+    "\n",
+    "diffmat=j_eval(xjvals,xivals,diff=1) #E matrix of lj(xi) components\n",
+    "fxivals=diffmat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
+    "fxivals[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c2e66bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " -0.8414709848078965\n",
+       " -0.841404322650035\n",
+       " -0.8412042758047135\n",
+       " -0.8408706633083012\n",
+       " -0.8404031840598705"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Compare the above to the true values of f'(x_j) -> remember x_j are the interpolation points\n",
+    "diff_exact=-sin.(xjvals)[1:5]"
+   ]
   }
  ],
  "metadata": {
