Added formula for 2D barycentric interpolation and reran code

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a6a722b2",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -141,8 +141,8 @@
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 0.8775825618903733\n",
-       " 0.7316888688738209"
+       " 0.8775825618903732\n",
+       " 0.731688868873821"
       ]
      },
      "metadata": {},
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "511bcb73",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -267,12 +267,25 @@
     "y_j &=\\cos(\\frac{\\pi j}{n_y}) & \\text{for j=0,..., $n_y$}\n",
     "\\end{align*}\n",
     "```\n",
-    "And let $f_{ij}=f(x_i,y_j)$ be the function value at $(x_i,y_j)$  - i.e. $f_{ij}=f(x_i,y_j)$. For ease, we assume $n_x=n_y=n$."
+    "And let $f_{ij}=f(x_i,y_j)$ be the function value at $(x_i,y_j)$  - i.e. $f_{ij}=f(x_i,y_j)$. Next we compute the weights $w_i^{(x)}$ for $x_i$ and the weights $w_j^{(y)}$ for $y_j$. The interpolant at a point $(x,y)$ is:\n",
+    "```math\n",
+    "p(x,y)=\\frac{\\sum_{i=0}^{n_x} \\sum_{j=0}^{n_y} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\frac{w_j^{(y)}}{y-y_j} \\cdot f_{ij}}{\\sum_{i=0}^{n_x} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\sum_{j=0}^{n_y} \\frac{w_j^{(y)}}{y-y_j}}\n",
+    "```\n",
+    "For ease, we assume $n_x=n_y=n$ and the function ```j_eval_multidim``` uses the following algorithm to compute $p(x,y)$ on a structured grid:\n",
+    "1. For each new $y$ we wish to evaluate at, we fix the $y$ and for each $i$, interpolate in the $y$-direction to get:\n",
+    "```math\n",
+    "g_i(y)=\\frac{\\sum_{j=0}^{n} \\frac{w_j^{(y)}}{y-y_j}f_{ij}}{\\sum_{j=0}^{n}\\frac{w_j^{(y)}}{y-y_j}}\n",
+    "``` \n",
+    "2. Then the function interpolates in $x$:\n",
+    "```math\n",
+    "p(x,y)=\\frac{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}g_i(y)}{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}}\n",
+    "```\n",
+    "Note the above algorithm can be generalised to 3+ dimensions by interpolating along one axis at a time.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "6191924b",
    "metadata": {},
    "outputs": [
@@ -288,7 +301,7 @@
     }
    ],
    "source": [
-    "#for basic functio f(x,y)=x+y\n",
+    "#for basic functio f(x,y)=x+y, where we want to find f(0.25,2)\n",
     "include(\"j_eval_multidim.jl\")\n",
     "fmat1=[2 1 0; 1 0 -1; 0 -1 -2]\n",
     "j_eval_multidim([[1,1],[0,0],[-1.0,-1]],[[0.25,2]],fmat1)"
@@ -296,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "395a8643",
    "metadata": {},
    "outputs": [
@@ -311,9 +324,9 @@
     }
    ],
    "source": [
-    "#check it \n",
+    "#check it against true answer\n",
     "include(\"basic_func.jl\")\n",
-    "ans=basic_func(0.25,2)"
+    "true_ans=basic_func(0.25,2)"
    ]
   },
   {
@@ -326,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
@@ -356,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
