Tried to add differentiation for f(x)=|x|+0.5x-x^2

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "a6a722b2",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "511bcb73",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "6191924b",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "395a8643",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
@@ -391,6 +391,37 @@
    "source": [
     "#Compare the above to the true values of f'(x_j) -> remember x_j are the interpolation points\n",
     "diff_exact=-sin.(xjvals)[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98fcc458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#For f(x,y)=|x|+0.5x-x^2\n",
+    "diffx=(j_eval(xjvals,[0.5],diff=1)*fvec2)[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2e37700",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diffx=(j_eval(xjvals,[0.5],diff=1)*fvec2)[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45ea8e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#diff2=(j_eval(xjvals,[0.5],diff=2)*fvec2)[1:5]"
    ]
   }
  ],
