Added section subheading

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -394,6 +394,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c30995b8",
+   "metadata": {},
+   "source": [
+    "Now trialling 1st derivative function part of $f(x)=|x|+\\frac{x}{2}-x^2$:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "id": "98fcc458",
