--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "id": "a6a722b2",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "id": "511bcb73",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "id": "6191924b",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "id": "395a8643",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
@@ -363,13 +363,13 @@
     "n=200 #so we have 201 interpolation/Chebyshev points\n",
     "\n",
     "diffmat=j_eval(xjvals,xivals,diff=1) #E matrix of lj(xi) components\n",
-    "fxivals=diffmat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
-    "fxivals[1:5]"
+    "dfxivals=diffmat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
+    "dfxivals[1:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
@@ -394,6 +394,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c718608",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " -44878.473201488654\n",
+       "   6820.426465186807\n",
+       "   1704.8964773449432\n",
+       "    757.5763803684644\n",
+       "    426.01466669450417"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "diff2mat=j_eval(xjvals,xivals,diff=2) #E matrix of lj(xi) components\n",
+    "df2xivals=diff2mat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
+    "df2xivals[1:5] #would expect them to be -ve fvec"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c30995b8",
    "metadata": {},
@@ -403,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 104,
    "id": "98fcc458",
    "metadata": {},
    "outputs": [
@@ -429,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 105,
    "id": "b2e37700",
    "metadata": {},
    "outputs": [
@@ -454,12 +481,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 106,
    "id": "e45ea8e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " -27083.87260969328\n",
+       "   4020.86616036464\n",
+       "   1020.9894343056176\n",
+       "    446.6273926845504\n",
+       "    255.11412374146855"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#diff2=(j_eval(xjvals,[0.5],diff=2)*fvec2)[1:5]"
+    "diff2=(j_eval(xjvals,[0.5],diff=2)*fvec2)[1:5]"
    ]
   }
  ],
