Added l_j(x) formula to notes

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -57,6 +57,10 @@
     "```math\n",
     "\\textbf{f}(\\textbf{x}_i)=\\frac{E *\\textbf{f}}{E *\\mathbf{1}}\n",
     "```\n",
+    "The formula the function ```j_eval``` uses for $\\ell_j(x)$ is:\n",
+    "```math\n",
+    "\\ell_j(x)=\\frac{\\frac{w_j}{x-x_j}}{\\sum_{k=0}^{n} \\frac{w_k}{x-x_k}}\n",
+    "```\n",
     "The ```j_eval_cheby2``` function only uses $x_j$ values of Chebyshev points of the second kind, whose formula are:\n",
     "\n",
     "```math\n",
