--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 258,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 259,
    "id": "a6a722b2",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 260,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -145,8 +145,8 @@
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 0.8775825618903732\n",
-       " 0.731688868873821"
+       " 0.8775825618903724\n",
+       " 0.7316888688738207"
       ]
      },
      "metadata": {},
@@ -156,12 +156,22 @@
    "source": [
     "include(\"j_eval.jl\")\n",
     "emat2=j_eval(xjvals,xivals) #E matrix of lj(xi) components\n",
-    "fxivals2=(emat2*fvec)./(emat2*vec1)"
+    "fxivals2=(emat2*fvec)#./(emat2*vec1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 261,
+   "id": "716e64e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fxivals3=emat2*fvec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 263,
    "id": "511bcb73",
    "metadata": {},
    "outputs": [
@@ -226,7 +236,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 264,
+   "id": "de9e3200",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100-element Vector{Float64}:\n",
+       " -0.4851001877396717\n",
+       " -0.455908991937141\n",
+       " -0.4274918825266798\n",
+       " -0.3999018812895803\n",
+       " -0.3731112412231863\n",
+       " -0.3470913872672765\n",
+       " -0.32188829792717844\n",
+       " -0.2975205606138642\n",
+       " -0.27392279205209513\n",
+       " -0.2511093419902461\n",
+       "  ⋮\n",
+       "  0.5560772079479053\n",
+       "  0.5524794393861359\n",
+       "  0.5481117020728212\n",
+       "  0.5429086127327235\n",
+       "  0.5368887587768139\n",
+       "  0.5300981187104198\n",
+       "  0.5225081174733198\n",
+       "  0.5140910080628588\n",
+       "  0.5048998122603281"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#emat3\n",
+    "fxivals3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -243,11 +294,11 @@
    ],
    "source": [
     "emat4=j_eval(xjvals,xivals2) #E matrix of lj(xi) components\n",
-    "fxivals4=(emat4*fvec2)./(emat4*vec1)\n",
+    "fxivals4=(emat4*fvec2)#./(emat4*vec1)\n",
     "\n",
     "fig2=Figure()\n",
     "ax2=Axis(fig2[2,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\") #Axis(fig1[1,1],xlabel=\"x\",ylabel=\"f(x)\",title=\"n=200\")\n",
-    "scatter!(ax2,xivals2,fxivals3)\n",
+    "scatter!(ax2,xivals2,fxivals4)\n",
     "fig2\n"
    ]
   },
@@ -289,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 266,
    "id": "6191924b",
    "metadata": {},
    "outputs": [
@@ -313,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 267,
    "id": "395a8643",
    "metadata": {},
    "outputs": [
@@ -343,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 268,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
@@ -373,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 269,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
@@ -399,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 270,
    "id": "1c718608",
    "metadata": {},
    "outputs": [
@@ -434,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 271,
    "id": "98fcc458",
    "metadata": {},
    "outputs": [
@@ -460,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 272,
    "id": "b2e37700",
    "metadata": {},
    "outputs": [
@@ -485,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 273,
    "id": "e45ea8e9",
    "metadata": {},
    "outputs": [
@@ -506,6 +557,135 @@
    ],
    "source": [
     "diff2=(j_eval(xjvals,[0.5],diff=2)*fvec2)[1:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641fa80f",
+   "metadata": {},
+   "source": [
+    "# Stability using barycentric interpolation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "id": "4183b89d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11-element Vector{ComplexF64}:\n",
+       " -23.185760980826743 - 12.259944263586952im\n",
+       " -23.185760980826743 + 12.259944263586952im\n",
+       "  -5.884891262284991 - 20.7371415461934im\n",
+       "  -5.884891262284991 + 20.7371415461934im\n",
+       "  -2.575452956702816 - 17.1633286633441im\n",
+       "  -2.575452956702816 + 17.1633286633441im\n",
+       " -1.4048098436244374 - 10.686268035104519im\n",
+       " -1.4048098436244374 + 10.686268035104519im\n",
+       " -0.5883172279567646 - 4.155304706787289im\n",
+       " -0.5883172279567646 + 4.155304706787289im\n",
+       "  2.2784645427915486 + 0.0im"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using LinearAlgebra\n",
+    "#For m=1\n",
+    "taumaxtrial1=1 #trial 1 with a delay of tau=1 \n",
+    "#for more than one delay, take tau max to be largest delay \n",
+    "N=10\n",
+    "tjvals=reverse((-taumaxtrial1/2)*(cos.(pi*(0:N)'/N)[:].+1))\n",
+    "ljvals=j_eval(tjvals,[0,-taumaxtrial1])\n",
+    "#tjvals2=(-2/2)*(cos.(pi*(0:N)'/N)[:].+1)\n",
+    "Dtrial1=j_eval(tjvals,[0,-taumaxtrial1],diff=1)\n",
+    "stabmatrixAtrial1=fill(NaN,N+1,N+1)\n",
+    "stabmatrixAtrial1[2:end,:]=Dtrial1[2:end,:]\n",
+    "\n",
+    "a=2\n",
+    "b=exp(1) #b=e\n",
+    "\n",
+    "stabmatrixAtrial1[1,:]=a*(ljvals[1,:])+b*(ljvals[2,:])\n",
+    "\n",
+    "eigvals(stabmatrixAtrial1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "451b5a19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30-element Vector{ComplexF64}:\n",
+       " -125.55396986482523 + 0.0im\n",
+       "  -79.83209089129548 - 77.32512676216008im\n",
+       "  -79.83209089129548 + 77.32512676216008im\n",
+       "  -65.43342929419491 + 0.0im\n",
+       "  -61.55778707889961 - 24.569767314589292im\n",
+       "  -61.55778707889961 + 24.569767314589292im\n",
+       " -49.034877932505765 - 48.30752547082575im\n",
+       " -49.034877932505765 + 48.30752547082575im\n",
+       " -26.736973488773287 - 118.65873866588186im\n",
+       " -26.736973488773287 + 118.65873866588186im\n",
+       "                     ⋮\n",
+       " -10.400919541541283 + 38.92741649498601im\n",
+       "  -9.900527931335066 - 69.86917824530187im\n",
+       "  -9.900527931335066 + 69.86917824530187im\n",
+       "  -9.345070452991889 - 25.570711320019164im\n",
+       "  -9.345070452991889 + 25.570711320019164im\n",
+       " -5.0567792803906695 - 4.026235533850058im\n",
+       " -5.0567792803906695 + 4.026235533850058im\n",
+       " -1.3352684760607727 - 9.119483347402427im\n",
+       " -1.3352684760607727 + 9.119483347402427im"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "###For m=2 with 2 delays tau1 and tau2\n",
+    "m=2\n",
+    "Id2=Matrix{Float64}(I,2,2)\n",
+    "\n",
+    "tau1=0.2\n",
+    "tau2=0.3\n",
+    "taumaxtrial2=0.3\n",
+    "N2=14\n",
+    "\n",
+    "tjvals2=reverse((-taumaxtrial2/2)*(cos.(pi*(0:N2)'/N2)[:].+1))\n",
+    "ljvals2=j_eval(tjvals2,[0,-tau1,-tau2])\n",
+    "#tjvals2=(-2/2)*(cos.(pi*(0:N)'/N)[:].+1)\n",
+    "Dtrial2=j_eval(tjvals2,[0,-taumaxtrial2],diff=1)\n",
+    "stabmatrixAtrial2=fill(NaN,m*(N2+1),m*(N2+1))\n",
+    "#stabmatrixAtrial2[2:end,:]=Dtrial2[2:end,:]\n",
+    "mD2mat=fill(NaN,m*N2,m*(N2+1))\n",
+    "for i in 2:N2+1\n",
+    "    for j in 1:N2+1\n",
+    "        #mD2mat[i-1:i,2*j-1:2*j]=Id2*Dtrial2[i,j]\n",
+    "        mD2mat[2*i-3:2*i-2,2*j-1:2*j]=Id2*Dtrial2[i,j]\n",
+    "    end \n",
+    "end \n",
+    "\n",
+    "stabmatrixAtrial2[m+1:end,1:end]=mD2mat\n",
+    "\n",
+    "M1=[-6.45 -12.1; 1.5 -0.45]\n",
+    "M2=[-6 0; 1 0]\n",
+    "M3=[0 4; 0 -2]\n",
+    "\n",
+    "for j in 1:N2+1\n",
+    "    stabmatrixAtrial2[1:m,2*j-1:2*j]=M1*(ljvals2[1,j]*Id2)+M2*(ljvals2[2,j]*Id2)+M3*(ljvals2[3,j]*Id2)\n",
+    "end \n",
+    "\n",
+    "eigvals(stabmatrixAtrial2) #rightmost eigenvalue matches the one in Breda source!!!"
    ]
   }
  ],
