--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "id": "4183b89d",
    "metadata": {},
    "outputs": [
@@ -610,14 +610,16 @@
     "a=2\n",
     "b=exp(1) #b=e\n",
     "\n",
-    "stabmatrixAtrial1[1,:]=a*(ljvals[1,:])+b*(ljvals[2,:])\n",
-    "\n",
-    "eigvals(stabmatrixAtrial1)"
+    "#stabmatrixAtrial1[1,:]=a*(ljvals[1,:])+b*(ljvals[2,:])\n",
+    "for j in 1:N+1\n",
+    "    stabmatrixAtrial1[1,j]=a*(ljvals[1,j])+b*(ljvals[2,j])\n",
+    "end \n",
+    "eigvals(stabmatrixAtrial1) #doesn't match that given in Breda source"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "id": "451b5a19",
    "metadata": {},
    "outputs": [
@@ -663,14 +665,11 @@
     "\n",
     "tjvals2=reverse((-taumaxtrial2/2)*(cos.(pi*(0:N2)'/N2)[:].+1))\n",
     "ljvals2=j_eval(tjvals2,[0,-tau1,-tau2])\n",
-    "#tjvals2=(-2/2)*(cos.(pi*(0:N)'/N)[:].+1)\n",
     "Dtrial2=j_eval(tjvals2,[0,-taumaxtrial2],diff=1)\n",
     "stabmatrixAtrial2=fill(NaN,m*(N2+1),m*(N2+1))\n",
-    "#stabmatrixAtrial2[2:end,:]=Dtrial2[2:end,:]\n",
     "mD2mat=fill(NaN,m*N2,m*(N2+1))\n",
     "for i in 2:N2+1\n",
     "    for j in 1:N2+1\n",
-    "        #mD2mat[i-1:i,2*j-1:2*j]=Id2*Dtrial2[i,j]\n",
     "        mD2mat[2*i-3:2*i-2,2*j-1:2*j]=Id2*Dtrial2[i,j]\n",
     "    end \n",
     "end \n",
@@ -682,7 +681,7 @@
     "M3=[0 4; 0 -2]\n",
     "\n",
     "for j in 1:N2+1\n",
-    "    stabmatrixAtrial2[1:m,2*j-1:2*j]=M1*(ljvals2[1,j]*Id2)+M2*(ljvals2[2,j]*Id2)+M3*(ljvals2[3,j]*Id2)\n",
+    "    stabmatrixAtrial2[1:m,2*j-1:2*j]=M1*(ljvals2[1,j]*Id2)+M2*(ljvals2[2,j]*Id2)+M3*(ljvals2[3,j]*Id2) #indices would change for different m (m!=0)\n",
     "end \n",
     "\n",
     "eigvals(stabmatrixAtrial2) #rightmost eigenvalue matches the one in Breda source!!!"
