Added neuron example to show barycentric interpolation stability function

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "id": "cace5d36",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
     "lamr1=fill(0.0+0.0*im,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i],lamr1[i],=stab_func_bi(neuronfunc,neurontau,[k,beta,a12,plist1[i],tau1,tau2,taus],xlist1[i],3,10) #outputs the stability (1 for stable, 0 for unstable) and also gives the eigenvalues for each point\n",
+    "    stab[i],lamr1[i],=stab_func_bi(neuronfunc,neurontau,[k,beta,a12,plist1[i],tau1,tau2,taus],xlist1[i],3,10) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
