--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "b30a8b29",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
     "lamr1=fill(0.0+0.0*im,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab_bi[i],lamr1[i],=stab_func_bi(neuronfunc,neurontau,[k,beta,a12,plist1[i],tau1,tau2,taus],xlist1[i],3,20) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
+    "    stab_bi[i],lamr1[i],=stab_func_bi(neuronfunc,neurontau,[k,beta,a12,plist1[i],tau1,tau2,taus],xlist1[i],nd,20) #outputs the stability (1 for stable, 0 for unstable) and also gives the rightmost eigenvalue for each equilibrium point\n",
     "end\n",
     "\n",
     "stablebi=(stab_bi.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "b8906377",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
