Corrected Hopf eigenvalue

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -270,7 +270,7 @@
    "id": "3d08b9cc",
    "metadata": {},
    "source": [
-    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. λ=±ω. We start finding the Hopf parameters by finding the initial guess of the a₂₁ value for the Hopf bifurcation: "
+    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. λ=±ωi. We start finding the Hopf parameters by finding the initial guess of the a₂₁ value for the Hopf bifurcation: "
    ]
   },
   {
