--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
    "id": "208b8b1c",
    "metadata": {},
    "source": [
-    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. λ=±ω. We start finding the Hopf parameters by finding the initial guess of the ```a``` value for the Hopf bifurcation: "
+    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. λ=±ωi. We start finding the Hopf parameters by finding the initial guess of the ```a``` value for the Hopf bifurcation: "
    ]
   },
   {
